--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                 <a href="#home" class="text-base flex text-dark py-2 mx-8 group-hover:text-primary">Beranda</a>
                             </li>
                             <li class="group">
-                                <a href="#about" class="text-base flex text-dark py-2 mx-8 group-hover:text-primary">Tentang Saya</a>
+                                <a href="#about" class="text-base flex text-dark py-2 mx-8 group-hover:text-primary">About Me</a>
                             </li>
                             <li class="group">
                                 <a href="#portfolio" class="text-base flex text-dark py-2 mx-8 group-hover:text-primary">Portfolio</a>
