--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="flex items-center justify-between relative">
                 <div class="px-4">
-                    <a href="#home" class="font-bold text-primary block py-6">GilangFauzi</a>
+                    <a href="#home" class="font-bold text-primary dark:text-blue-500 block py-6">Biography</a>
                 </div>
                 <div class="flex items-center px-4">
                     <button id="hamburger" name="humberger" type="button" class="block absolute right-4 lg:hidden">
@@ -76,20 +76,35 @@
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full self-center px-4 font-inter lg:w-1/2">
-                    <h1 class="text-base font-semibold text-primary lg:text-2xl lg:mt-9 lg:right-0">Hallo Everybody 👋, saya <span class="block text-dark text-4xl mt-1 lg:text-5xl dark:text-white">Gilang Fauzi</span></h1>
+                    <h1 class="text-base font-semibold text-primary dark:text-blue-500 lg:text-2xl lg:mt-9 lg:right-0">Hallo Everybody 👋, saya <span class="block text-dark text-4xl mt-1 lg:text-5xl dark:text-white">Gilang Fauzi</span></h1>
                     <h2 class="text-secondary text-lg mb-5 lg:text-2xl">Software Engineer & <span class="text-dark">IoT Engineer</span></h2>
                     <p class="text-slate-400 mb-10 leading-relaxed">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro placeat a libero soluta commodi dolore. Debitis ducimus maiores officiis corrupti.</p>
 
-                    <a href="" class="font-semibold bg-primary text-white py-3 px-8 rounded-full hover:shadow-md hover:opacity-90 transition duration-300 ease-in-out">Download CV</a>
+                    <a href="" class="font-semibold bg-primary text-white py-3 px-8 rounded-full hover:shadow-md hover:opacity-90 transition duration-300 ease-in-out dark:bg-gradient-to-r dark:from-cyan-500 dark:to-blue-500">Download CV</a>
                 </div>
 
                 <div class="w-full self-end px-4 lg:w-1/2">
                     <div class="mt-8 relative lg:mt-8 lg:right-0">
-                        <img src="dist/img/Gilang.png" alt="Gilang Fauzi" class="max-w-full max-h-[500px] mx-auto relative z-10">
+                        <img src="dist/img/animasi.png" alt="Gilang Fauzi" class="max-w-full max-h-[500px] mx-auto relative z-10 group">
                         <span class="absolute -bottom-9 left-1 lg:translate-x-36 translate-x-3 md:translate-x-32 md:scale-125 transition">
                             <svg width="400" height="600" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
-                                <path fill="#14b8a6" d="M39.3,-64.8C49.4,-54.6,55.2,-41.2,60.8,-28C66.4,-14.9,71.8,-1.9,72.8,12.5C73.9,26.8,70.5,42.5,60.9,51.7C51.3,61,35.4,63.8,21.2,64.2C7.1,64.7,-5.4,62.8,-19.3,61C-33.3,59.1,-48.6,57.3,-61.3,49.4C-73.9,41.5,-83.8,27.5,-86.2,12.3C-88.5,-2.9,-83.4,-19.3,-73.5,-30.4C-63.5,-41.5,-48.8,-47.3,-35.8,-56.2C-22.8,-65.1,-11.4,-77.1,1.6,-79.6C14.6,-82,29.1,-75,39.3,-64.8Z" transform="translate(100 100) scale(1)" />
-                              </svg>
+                                <linearGradient id="myGradient" gradientTransform="rotate(120)">
+                                    <stop offset="12%" stop-color="cyan" style="filter: hue-rotate(1000deg);" />
+                                    <stop offset="80%" stop-color="blue" />
+                                </linearGradient>
+                                
+                                <path fill="url(#myGradient)" d="M39.3,-64.8C49.4,-54.6,55.2,-41.2,60.8,-28C66.4,-14.9,71.8,-1.9,72.8,12.5C73.9,26.8,70.5,42.5,60.9,51.7C51.3,61,35.4,63.8,21.2,64.2C7.1,64.7,-5.4,62.8,-19.3,61C-33.3,59.1,-48.6,57.3,-61.3,49.4C-73.9,41.5,-83.8,27.5,-86.2,12.3C-88.5,-2.9,-83.4,-19.3,-73.5,-30.4C-63.5,-41.5,-48.8,-47.3,-35.8,-56.2C-22.8,-65.1,-11.4,-77.1,1.6,-79.6C14.6,-82,29.1,-75,39.3,-64.8Z" transform="translate(100 100) scale(1)" />
+                            </svg>
+                        </span>
+                        <span class="absolute -bottom-9 left-1 lg:translate-x-36 translate-x-3 md:translate-x-32 md:scale-125 transition dark:hidden">
+                            <svg width="400" height="600" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                                <linearGradient id="myGradient" gradientTransform="rotate(120)">
+                                    <stop offset="12%" stop-color="cyan" style="filter: hue-rotate(1000deg);" />
+                                    <stop offset="80%" stop-color="blue" />
+                                </linearGradient>
+                                
+                                <path fill="#0891b2" d="M39.3,-64.8C49.4,-54.6,55.2,-41.2,60.8,-28C66.4,-14.9,71.8,-1.9,72.8,12.5C73.9,26.8,70.5,42.5,60.9,51.7C51.3,61,35.4,63.8,21.2,64.2C7.1,64.7,-5.4,62.8,-19.3,61C-33.3,59.1,-48.6,57.3,-61.3,49.4C-73.9,41.5,-83.8,27.5,-86.2,12.3C-88.5,-2.9,-83.4,-19.3,-73.5,-30.4C-63.5,-41.5,-48.8,-47.3,-35.8,-56.2C-22.8,-65.1,-11.4,-77.1,1.6,-79.6C14.6,-82,29.1,-75,39.3,-64.8Z" transform="translate(100 100) scale(1)" />
+                            </svg>
                         </span>
                     </div>
                 </div>
@@ -103,7 +118,7 @@
         <div class="container">
             <div class="flex flex-wrap">
                 <div class="w-full px-4 mb-10 lg:w-1/2">
-                    <h4 class="font-bold uppercase text-primary text-lg mb-3">Tentang Saya</h4>
+                    <h4 class="font-bold uppercase text-primary dark:text-blue-500 text-lg mb-3">Tentang Saya</h4>
                     <h2 class="font-semibold font-dark text-3xl mb-5 max-w-xl lg:text-4xl dark:text-white">Yuk, Kita menari di atas penderitaan!</h2>
                     <p class="text-base text-secondary max-w-md">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas possimus, eligendi unde officia nihil harum delectus nesciunt deserunt non ipsum!</p>
                 </div>
@@ -140,7 +155,7 @@
             <div class="container">
                 <div class="w-full px-4">
                     <div class="max-w-xl mx-auto text-center mb-16">
-                        <h4 class="font-semibold text-lg text-primary mb-2">Portfolio</h4>
+                        <h4 class="font-semibold text-lg text-primary dark:text-blue-500 mb-2">Portfolio</h4>
                         <h2 class="font-bold text-dark text-3xl mb-4 sm:text-3xl md:text-4xl lg:text-5xl dark:text-white">Project Terbaru</h2>
                         <p class="text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum accusamus tenetur repudiandae saepe velit, omnis recusandae a vero reiciendis? Modi?</p>
                     </div>
@@ -184,7 +199,7 @@
         <div class="container">
             <div class="w-full px-4">
                 <div class=" mx-auto text-center mb-16">
-                    <h4 class="font-semibold text-lg text-primary mb-2">Clients</h4>
+                    <h4 class="font-semibold text-lg text-primary dark:text-blue-500 mb-2">Clients</h4>
                     <h2 class="font-bold text-dark text-3xl mb-4 sm:text-3xl md:text-4xl lg:text-5xl dark:text-white">Yang Pernah Bekerjasama</h2>
                     <p class="text-slate-400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum accusamus tenetur repudiandae saepe velit, omnis recusandae a vero reiciendis? Modi?</p>
                 </div>
@@ -212,7 +227,7 @@
             <div class="container">
                 <div class="w-full px-4">
                     <div class="max-w-xl mx-auto text-center mb-16">
-                        <h4 class="font-semibold text-lg text-primary mb-2">Blog</h4>
+                        <h4 class="font-semibold text-lg text-primary dark:text-blue-500 mb-2">Blog</h4>
                         <h2 class="font-bold text-dark text-3xl mb-4 sm:text-3xl md:text-4xl lg:text-5xl dark:text-white">Tulisan Terkini</h2>
                         <p class="text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum accusamus tenetur repudiandae saepe velit, omnis recusandae a vero reiciendis? Modi?</p>
                     </div>  
@@ -225,7 +240,7 @@
                             <div class="py-8 px-6">
                                 <h3><a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Tips Belajar Programming</a></h3>
                                 <p class="font-medium text-secondary text-base mb-4 dark:text-slate-300">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, expedita!</p>
-                                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md hover:opacity-90 hover:shadow-md">Baca Selengkapnya</a>
+                                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md hover:opacity-90 hover:shadow-md dark:bg-gradient-to-r from-cyan-500 to-blue-500">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -235,7 +250,7 @@
                             <div class="py-8 px-6">
                                 <h3><a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Develope IoT</a></h3>
                                 <p class="font-medium text-secondary text-base mb-4 dark:text-slate-300">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, expedita!</p>
-                                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md hover:opacity-90 hover:shadow-md">Baca Selengkapnya</a>
+                                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md hover:opacity-90 hover:shadow-md dark:bg-gradient-to-r from-cyan-500 to-blue-500">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -245,7 +260,7 @@
                             <div class="py-8 px-6">
                                 <h3><a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary truncate dark:text-white">Installasi Windows</a></h3>
                                 <p class="font-medium text-secondary text-base mb-4 dark:text-slate-300">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, expedita!</p>
-                                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md hover:opacity-90 hover:shadow-md">Baca Selengkapnya</a>
+                                <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md hover:opacity-90 hover:shadow-md dark:bg-gradient-to-r from-cyan-500 to-blue-500">Baca Selengkapnya</a>
                             </div>
                         </div>
                     </div>
@@ -259,7 +274,7 @@
             <div class="container">
                 <div class="w-full px-4">
                     <div class="max-w-xl mx-auto text-center mb-16">
-                        <h4 class="font-semibold text-lg text-primary mb-2">Contact</h4>
+                        <h4 class="font-semibold text-lg text-primary dark:text-blue-500 mb-2">Contact</h4>
                         <h2 class="font-bold text-dark text-3xl mb-4 sm:text-3xl md:text-4xl lg:text-5xl dark:text-white">Hubungi Kami</h2>
                         <p class="text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic, atque.</p>
                     </div>  
@@ -268,19 +283,19 @@
                 <form>
                     <div class="w-full lg:w-2/3 lg:mx-auto">
                         <div class="w-full px-4 mb-8">
-                            <label for="name" class="text-base text-primary font-bold">Nama</label>
+                            <label for="name" class="text-base text-primary dark:text-blue-500 font-bold">Nama</label>
                             <input type="text" id="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
                         </div>
                         <div class="w-full px-4 mb-8">
-                            <label for="email" class="text-base text-primary font-bold">Email</label>
+                            <label for="email" class="text-base text-primary dark:text-blue-500 font-bold">Email</label>
                             <input type="email" id="email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
                         </div>
                         <div class="w-full px-4 mb-8">
-                            <label for="message" class="text-base text-primary font-bold">Pesan</label>
+                            <label for="message" class="text-base text-primary dark:text-blue-500 font-bold">Pesan</label>
                             <textarea type="text" id="message" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary h-32"></textarea>
                         </div>
                         <div class="w-full px-4">
-                            <button class="text-base font-semibold text-white rounded-full bg-primary py-3 px-8 w-full hover:opacity-80 hover:shadow-md">Kirim</button>
+                            <button class="text-base font-semibold text-white rounded-full bg-primary py-3 px-8 w-full hover:opacity-80 hover:shadow-md dark:bg-gradient-to-r from-cyan-500 to-blue-500">Kirim</button>
                         </div>
                     </div>
                 </form>
@@ -364,7 +379,7 @@
     <!-- Footer Section End -->
 
     <!-- Back to Top Start -->
-        <a href="#home" id="to-top" class="h-14 w-14 rounded-full fixed z-[9999] bg-primary bottom-4 right-4 p-2 hidden">
+        <a href="#home" id="to-top" class="h-14 w-14 rounded-full fixed z-[9999] bg-primary dark:bg-gradient-to-r from-cyan-500 to-blue-500 bottom-4 right-4 p-2 hidden">
             <img src="/dist/img/icons/rocket.svg" class="w-9 mx-auto filter invert" alt="">
         </a>
     <!-- Back to Top End -->
