--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="flex flex-wrap">
                 <div class="w-full self-center px-4 font-inter lg:w-1/2">
                     <h1 class="text-base font-semibold text-primary dark:text-blue-500 lg:text-2xl lg:mt-9 lg:right-0">Hallo Everybody 👋, saya <span class="block text-dark text-4xl mt-1 lg:text-5xl dark:text-white">Gilang Fauzi</span></h1>
-                    <h2 class="text-secondary text-lg mb-5 lg:text-2xl">Software Engineer & <span class="text-dark">IoT Engineer</span></h2>
+                    <h2 class="text-secondary text-lg mb-5 lg:text-2xl">Software Engineer & <span class="text-secondary">IoT Engineer</span></h2>
                     <p class="text-slate-400 mb-10 leading-relaxed">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro placeat a libero soluta commodi dolore. Debitis ducimus maiores officiis corrupti.</p>
 
                     <a href="" class="font-semibold bg-primary text-white py-3 px-8 rounded-full hover:shadow-md hover:opacity-90 transition duration-300 ease-in-out dark:bg-gradient-to-r dark:from-cyan-500 dark:to-blue-500">Download CV</a>
