fixed bug our memory

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h1 class="text-base font-semibold text-primary dark:text-blue-500 lg:text-2xl lg:mt-9 lg:right-0">Hallo Everybody 👋 <span class="block text-dark text-4xl mt-1 lg:text-4xl dark:text-white">Gilang Fauzi ❤ Intan Sapira</span></h1>
                     <h2 class="text-secondary text-lg mb-5 lg:text-2xl">All Our Memories Together</h2>
                     <p class="text-slate-400 mb-10 leading-relaxed">This is our website, which was created specifically to store our memories together and will always be visible to everyone</p>
-                    <audio id="myAudio" class="" controls>
+                    <audio id="myAudio" class="hidden" controls>
                         <source src="dist/music/music.mp3" type="audio/mp3">
                         Your browser does not support the audio tag.
                       </audio>
