--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             </svg>
                         </span>
                         <span class="absolute -bottom-9 left-1 lg:translate-x-36 translate-x-3 md:translate-x-32 md:scale-125 transition dark:hidden">
-                            <svg width="400" height="600" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+                            <svg width="300" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                                 <linearGradient id="myGradient" gradientTransform="rotate(120)">
                                     <stop offset="12%" stop-color="cyan" style="filter: hue-rotate(1000deg);" />
                                     <stop offset="80%" stop-color="blue" />
@@ -387,7 +387,7 @@
 
     <!-- Back to Top Start -->
         <a href="#home" id="to-top" class="h-14 w-14 rounded-full fixed z-[9999] bg-primary dark:bg-gradient-to-r from-cyan-500 to-blue-500 bottom-4 right-4 p-2 hidden">
-            <img src="/dist/img/icons/rocket.svg" class="w-9 mx-auto filter invert" alt="">
+            <img src="dist/img/icons/rocket.svg" class="w-9 mx-auto filter invert" alt="">
         </a>
     <!-- Back to Top End -->
 
